# CMPE185Group4

./: README.md  litter.data
box_msg/: CMakeLists.txt  package.xml
box_msg/msg/: BoundingBox.msg
dn_translate/: CMakeLists.txt  package.xml
dn_translate/launch/: detection.launch
dn_translate/model/: litter.cfg
dn_translate/src/: dn_translate.cpp
yolo_depth_locator/: CMakeLists.txt  package.xml
yolo_depth_locator/launch/: depth.launch
yolo_depth_locator/src/: yolo_depth_locator_cpp.cpp
