<?xml version="1.0"?>
<package format="2">
  <name>box_msg</name>
  <version>1.0.0</version>
  <description>The box_msg package</description>

  <maintainer email="reluc082092@gmail.com">ryan</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_export_depend>std_msgs</build_export_depend>


</package>
